src/test/ui/issues/issue-13847.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-13847.rs:2:5
   |
LL |     return.is_failure
   |     ^^^^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
