src/test/ui/issues/issue-13847.rs
fn main() {
    return.is_failure //~ ERROR type annotations needed
}
